--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 <body>
     <div class="board">
         <div class="info">
-            <img src="emtp19-2.png" alt="avt">
+            <img src="avt.jpg" alt="avt">
             <h1>Saki<br>Toshimiya</h1>
             <p><b>I'm a part time artist and devloper. You can contact me from there:</p>
         </div>
