--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <p><b>I'm a part time artist and devloper. You can contact me from there:</p>
         </div>
         <div class="butn">
-            <a class="btn1" href="link1">
+            <a class="btn1" href="https://discord.com/users/1109382376762654810">
                 <p>Discord</p>
                 <img src="discord.png" alt="discord_icon">
             </a>
-            <a class="btn2" href="link2">
+            <a class="btn2" href="https://www.youtube.com/@Sakimiya426">
                 <p>Youtube</p>
                 <img src="youtube.png" alt="youtube_icon">
             </a>
-            <a class="btn3" href="link3">
+            <a class="btn3" href="https://github.com/Sakitoshimiya">
                 <p>Github</p>
                 <img src="github.png" alt="github_icon">
             </a>
